Fixing Card Spacing

--- a/Activity 1/School Website/styles.css
+++ b/Activity 1/School Website/styles.css
@@ -14,6 +14,7 @@ Reg No: 19BCE0366 */
     margin: 0;
     font-family: 'Montserrat',sans-serif;
     /* background-color: var(--main); */
+    scroll-behavior: smooth;
 }
 
 body {
@@ -111,7 +112,7 @@ h2 {
     padding: 50px 20%;
 }
 
-.jumbotron {
+#jumbotron-home {
     background:
         linear-gradient(
           rgba(0, 0, 0, 0.5), 
@@ -124,7 +125,7 @@ h2 {
     color: white;
 }
 
-.jumbotron1 {
+#jumbotron-upcoming {
     background:
         linear-gradient(
           rgba(0, 0, 0, 0.5), 
@@ -137,18 +138,6 @@ h2 {
     color: white;
 }
 
-.jumbotron2 {
-    background:
-        linear-gradient(
-          rgba(0, 0, 0, 0.5), 
-          rgba(0, 0, 0, 0.5)
-        ),
-        url(#);
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 200px 20%;
-    color: white;
-}
 
 .container-light {
     background-color: white;
@@ -240,16 +229,13 @@ iframe {
     min-height: 500px;
 }
 
+.stack {
+    padding: 10px 5px;
+}
 
-.column {
-    background-color: white;
-    float: left;
-    width: 25%;
-    padding: 0 10px 10px;
-  }
-  
- 
 .row {
+    display: flex;
+    justify-content: space-evenly;
     background-color: white;
     margin: 0 -5px;
     padding-bottom: 10px;
@@ -258,16 +244,12 @@ iframe {
 .card {
     box-shadow: 0 0 8px  rgba(0,0,0,0.2);
     transition: 0.3s;
-  }
+}
   
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-.container {
+}
+
+.content {
     padding: 2px 16px;
-  }
-.clubs {
-      padding-top: 20px;
-      margin-bottom: 20px;
-  }
- 
+}
